--- a/h-charity-ui/src/app/modules/appeals/pages/appeals/appeal.component.html
+++ b/h-charity-ui/src/app/modules/appeals/pages/appeals/appeal.component.html
@@ -1,15 +1,9 @@
 <div class="grid">
   <div class="col-12">
     <div class="card">
-      <p-table
-        [value]="appeals"
-        [paginator]="true"
-        [rows]="5"
-        [tableStyle]="{ 'min-width': '50rem' }"
+      <p-table [value]="appeals" [paginator]="true" [rows]="5" [tableStyle]="{ 'min-width': '50rem' }"
         [rowsPerPageOptions]="[5, 10, 20]"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [showCurrentPageReport]="true"
-      >
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
         <ng-template pTemplate="caption">
           <div class="flex align-items-center justify-content-between">
             Appeals
@@ -18,7 +12,7 @@
         </ng-template>
         <ng-template pTemplate="header">
           <tr>
-            <th pSortableColumn="title" style="min-width: 12rem">
+            <th pSortableColumn="title" style="min-width: 25rem">
               Title<p-sortIcon field="title" />
             </th>
 
@@ -56,37 +50,22 @@
         <ng-template pTemplate="body" let-appeal>
           <tr>
             <td>{{ appeal.title }}</td>
-            <td>{{ appeal.requirementDate }}</td>
+            <td>{{ appeal.requirementDate | date:'dd-MM-yyyy' }}</td>
             <td>{{ appeal.totalFundsRequired }}</td>
             <td>{{ appeal.fundsReceived }}</td>
             <td>{{ appeal.fundsNeeded }}</td>
-            <td>{{ appeal.isZakatEligible }}</td>
-            <td>{{ appeal.isIntrestEligible }}</td>
-            <td>{{ appeal.isAnonymous }}</td>
+            <td>{{ appeal.isZakatEligible? 'Yes' : 'No' }}</td>
+            <td>{{ appeal.isIntrestEligible? 'Yes' : 'No' }}</td>
+            <td>{{ appeal.isAnonymous? 'Yes' : 'No' }}</td>
 
             <td>
               <div class="flex justify-content-center flex-wrap gap-3 mb-4">
-                <p-button
-                  icon="pi pi-pencil"
-                  [rounded]="true"
-                  [outlined]="true"
-                  severity="success"
-                  (onClick)="editAppeal(appeal)"
-                />
-                <p-button
-                  icon="pi pi-trash"
-                  severity="danger"
-                  [rounded]="true"
-                  [outlined]="true"
-                  (onClick)="deleteAppeal(appeal)"
-                />
-                <p-button
-                  icon="pi pi-eye"
-                  class="mr-1"
-                  [rounded]="true"
-                  [outlined]="true"
-                  (onClick)="viewAppeal(appeal)"
-                />
+                <p-button icon="pi pi-pencil" [rounded]="true" [outlined]="true" severity="success"
+                  (onClick)="editAppeal(appeal)" />
+                <p-button icon="pi pi-trash" severity="danger" [rounded]="true" [outlined]="true"
+                  (onClick)="deleteAppeal(appeal)" />
+                <p-button icon="pi pi-eye" class="mr-1" [rounded]="true" [outlined]="true"
+                  (onClick)="viewAppeal(appeal)" />
               </div>
             </td>
           </tr>
@@ -98,13 +77,8 @@
         </ng-template>
       </p-table>
 
-      <p-dialog
-        [(visible)]="appealDialog"
-        [style]="{ width: '1200px' }"
-        header="Edit Appeal"
-        [modal]="true"
-        styleClass="p-fluid"
-      >
+      <p-dialog [(visible)]="appealDialog" [style]="{ width: '1200px' }" header="Edit Appeal" [modal]="true"
+        styleClass="p-fluid">
         <ng-template pTemplate="content">
           <div class="grid">
             <div class="col-12">
@@ -114,166 +88,81 @@
                     <div class="col-12 md:col-6 lg:col-8">
                       <div class="grid">
                         <div class="col-12 md:col-12 lg:col-12">
-                          <input
-                            placeholder=" Appeals Title"
-                            type="text"
-                            pInputText
-                            formControlName="title"
-                          />
+                          <input placeholder=" Appeals Title" type="text" pInputText formControlName="title" />
                         </div>
 
                         <div class="col-12 md:col-6 lg:col-12">
-                          <p-editor
-                            formControlName="description"
-                            [style]="{ height: '200px' }"
-                            placeholder="Enter the Description"
-                          />
+                          <p-editor formControlName="description" [style]="{ height: '200px' }"
+                            placeholder="Enter the Description" />
                         </div>
                         <div class="col-12 md:col-6 lg:col-6">
                           Self <p-inputSwitch /> OnBehalf
                         </div>
                         <div class="col-12 md:col-6 lg:col-6">
-                          <input
-                            placeholder=" on Behalf Name"
-                            type="text"
-                            pInputText
-                            formControlName="onBehalfName"
-                          />
+                          <input placeholder=" on Behalf Name" type="text" pInputText formControlName="onBehalfName" />
                         </div>
                         <div class="col-12 md:col-6 lg:col-4">
-                          <p-inputNumber
-                            placeholder="Total Funds Required"
-                            mode="currency"
-                            inputId="currency-india"
-                            currency="INR"
-                            currencyDisplay="code"
-                            locale="en-IN"
-                            formControlName="totalFundsRequired"
-                          />
+                          <p-inputNumber placeholder="Total Funds Required" inputId="totalFundsRequired"
+                            formControlName="totalFundsRequired" />
                         </div>
 
                         <div class="col-12 md:col-6 lg:col-4">
-                          <p-inputNumber
-                            placeholder="Funds Received"
-                            mode="currency"
-                            inputId="currency-india"
-                            currency="INR"
-                            currencyDisplay="code"
-                            locale="en-IN"
-                            formControlName="fundsRecived"
-                          />
+                          <p-inputNumber placeholder="Funds Received" inputId="fundsReceived"
+                            formControlName="fundsReceived" />
                         </div>
 
                         <div class="col-12 md:col-6 lg:col-4">
-                          <p-inputNumber
-                            placeholder="Funds Needed"
-                            mode="currency"
-                            inputId="currency-india"
-                            currency="INR"
-                            currencyDisplay="code"
-                            locale="en-IN"
-                            formControlName="fundsNeeded"
-                          />
+                          <p-inputNumber placeholder="Funds Needed" inputId="fundsNeeded"
+                            formControlName="fundsNeeded" />
                         </div>
                         <div class="col-12 md:col-6 lg:col-4">
-                          <p-checkbox
-                            formControlName="zakatEligible"
-                            [binary]="true"
-                            inputId="binary"
-                          />
+                          <p-checkbox formControlName="zakatEligible" [binary]="true" inputId="zakatEligible" />
                           <label>Is Zakat Eligible</label>
                         </div>
                         <div class="col-12 md:col-6 lg:col-4">
-                          <p-checkbox
-                            formControlName="interestEligible"
-                            [binary]="true"
-                            inputId="binary"
-                          />
+                          <p-checkbox formControlName="interestEligible" [binary]="true" inputId="interestEligible" />
                           <label>Is Interest Eligible</label>
                         </div>
                         <div class="col-12 md:col-6 lg:col-4">
-                          <p-checkbox
-                            formControlName="isAnonymous"
-                            [binary]="true"
-                            inputId="binary"
-                          />
+                          <p-checkbox formControlName="isAnonymous" [binary]="true" inputId="isAnonymous" />
                           <label>Is Anonymous</label>
                         </div>
                       </div>
                     </div>
 
-                    <div
-                      class="flex-1 w-full lg:w-3 xl:w-4 flex flex-column row-gap-3"
-                    >
+                    <div class="flex-1 w-full lg:w-3 xl:w-4 flex flex-column row-gap-3">
                       <div class="grid">
                         <div class="col-12 md:col-6 lg:col-12">
-                          <input
-                            placeholder=" Appealer"
-                            type="text"
-                            pInputText
-                            formControlName="appealer"
-                          />
+                          <input placeholder=" Appealer" type="text" pInputText formControlName="appealer" />
                         </div>
                         <div class="col-12 md:col-6 lg:col-12">
-                          <input
-                            placeholder=" Appealer Mobile"
-                            type="text"
-                            pInputText
-                            formControlName="appealerMobile"
-                          />
+                          <input placeholder=" Appealer Mobile" type="text" pInputText
+                            formControlName="appealerMobile" />
                         </div>
                         <div class="col-12 md:col-6 lg:col-12">
-                          <p-calendar
-                            id="requirementDate"
-                            formControlName="requirementDate"
-                            [showIcon]="true"
-                          ></p-calendar>
+                          <p-calendar id="requirementDate" formControlName="requirementDate"
+                            [showIcon]="true"></p-calendar>
                         </div>
 
                         <div class="col-12 md:col-6 lg:col-12">
-                          <input
-                            placeholder=" Verifier"
-                            type="text"
-                            pInputText
-                            formControlName="verifier"
-                          />
+                          <input placeholder=" Verifier" type="text" pInputText formControlName="verifier" />
                         </div>
                         <div class="col-12 md:col-6 lg:col-12">
-                          <input
-                            placeholder=" Verifier Mobile"
-                            type="text"
-                            pInputText
-                            formControlName="verifierMobile"
-                          />
+                          <input placeholder=" Verifier Mobile" type="text" pInputText
+                            formControlName="verifierMobile" />
                         </div>
                         <div class="col-12 md:col-6 lg:col-12">
-                          <input
-                            placeholder=" Verified date"
-                            type="text"
-                            pInputText
-                            formControlName="verifiedDate"
-                          />
+                          <input placeholder=" Verified date" type="text" pInputText formControlName="verifiedDate" />
                         </div>
-                        <div
-                          class="flex flex-column sm:flex-row justify-content-between align-items-center gap-3 py-2"
-                        >
-                          <button
-                            pButton
-                            pRipple
-                            label="Discard"
-                            icon="pi pi-fw pi-trash"
-                            class="p-button-danger p-button-outlined flex-1"
-                            (click)="hideDialog()"
-                          ></button>
+                        <div class="col-12 md:col-6 lg:col-12"></div>
+                        <div class="col-12 md:col-6 lg:col-12"></div>
+                        <div class="col-12 md:col-6 lg:col-12"></div>
+                        <div class="flex flex-column sm:flex-row justify-content-between align-items-center gap-3 py-2">
+                          <button pButton pRipple label="Discard" icon="pi pi-fw pi-trash"
+                            class="p-button-danger p-button-outlined flex-1" (click)="hideDialog()"></button>
 
-                          <button
-                            pButton
-                            pRipple
-                            label="Save"
-                            icon="pi pi-fw pi-check"
-                            class="p-button-primary flex-1"
-                            (click)="saveAppeal()"
-                          ></button>
+                          <button pButton pRipple label="Save" icon="pi pi-fw pi-check" class="p-button-primary flex-1"
+                            style="font-size: 1.2em; padding: 0.8em 1.6em;" (click)="saveAppeal()"></button>
                         </div>
                       </div>
                     </div>
@@ -285,13 +174,8 @@
         </ng-template>
       </p-dialog>
 
-      <p-dialog
-        [(visible)]="viewDialog"
-        [style]="{ width: '1200px' }"
-        header="Appeals Details"
-        [modal]="true"
-        styleClass="p-fluid"
-      >
+      <p-dialog [(visible)]="viewDialog" [style]="{ width: '1200px' }" header="Appeals Details" [modal]="true"
+        styleClass="p-fluid">
         <div class="card">
           <div class="col-12 md:col-12 lg:col-12">
             <h2 style="text-align: center">{{ appeal && appeal.title }}</h2>
@@ -301,20 +185,16 @@
           </div>
           <br /><br />
           <h3 style="text-align: center">Fund Details</h3>
-          <div
-            style="
+          <div style="
               display: flex;
               justify-content: center;
               gap: 100px;
               margin-top: 20px;
               color: blue;
               font-size: 17px;
-            "
-          >
-            <span
-              >Total Funds Required:
-              {{ appeal && appeal.totalFundsRequired }}</span
-            >
+            ">
+            <span>Total Funds Required:
+              {{ appeal && appeal.totalFundsRequired }}</span>
             <span>Funds Received: {{ appeal && appeal.fundsReceived }}</span>
             <span>Funds Remaining: {{ appeal && appeal.fundsNeeded }}</span>
           </div>
@@ -346,12 +226,7 @@
             <p>Mobile: {{ appeal && appeal.verifierMobile }}</p>
             <p>Verified Date: {{ appeal && appeal.verifiedDate }}</p>
           </div>
-          <p-button
-            label="Close"
-            [text]="true"
-            severity="close"
-            (onClick)="hideDialog()"
-          />
+          <p-button label="Close" [text]="true" severity="close" (onClick)="hideDialog()" />
         </div>
       </p-dialog>
     </div>
