--- a/h-charity-ui/src/app/layout/app.topbar.component.html
+++ b/h-charity-ui/src/app/layout/app.topbar.component.html
@@ -55,3 +55,28 @@
     </button>
   </div>
 </div>
+
+<p-dialog
+  header="Edit Profile"
+  [modal]="true"
+  [(visible)]="showProfileDialog"
+  [style]="{ width: '25rem' }"
+>
+  <span class="p-text-secondary block mb-5">Update your information.</span>
+  <div class="flex align-items-center gap-3 mb-3">
+    <label for="username" class="font-semibold w-6rem">Username</label>
+    <input pInputText id="username" class="flex-auto" autocomplete="off" />
+  </div>
+  <div class="flex align-items-center gap-3 mb-5">
+    <label for="email" class="font-semibold w-6rem">Email</label>
+    <input pInputText id="email" class="flex-auto" autocomplete="off" />
+  </div>
+  <div class="flex justify-content-end gap-2">
+    <p-button
+      label="Cancel"
+      severity="secondary"
+      (onClick)="showProfileDialog = false"
+    />
+    <p-button label="Save" (onClick)="showProfileDialog = false" />
+  </div>
+</p-dialog>
