Updated appeals and add/update appeals

--- a/h-charity-ui/src/app/modules/appeals/pages/appeals/appeal.component.html
+++ b/h-charity-ui/src/app/modules/appeals/pages/appeals/appeal.component.html
@@ -162,7 +162,7 @@
                             class="p-button-danger p-button-outlined flex-1" (click)="hideDialog()"></button>
 
                           <button pButton pRipple label="Save" icon="pi pi-fw pi-check" class="p-button-primary flex-1"
-                            style="font-size: 1.2em; padding: 0.8em 1.6em;" (click)="saveAppeal()"></button>
+                            (click)="saveAppeal()"></button>
                         </div>
                       </div>
                     </div>
