--- a/h-charity-ui/src/app/modules/appeals/pages/appeals/appeal.component.html
+++ b/h-charity-ui/src/app/modules/appeals/pages/appeals/appeal.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div class="grid">
   <div class="col-12">
     <div class="card">
@@ -51,7 +52,7 @@
             <td>
               <div class="flex justify-content-center flex-wrap gap-3 mb-4">
                 <p-button icon="pi pi-pencil" [rounded]="true" [outlined]="true" severity="success"
-                  (onClick)="editAppeal(appeal)" />
+                  (onClick)="editAppeal(appeal.id)" />
                 <p-button icon="pi pi-trash" severity="danger" [rounded]="true" [outlined]="true"
                   (onClick)="deleteAppeal(appeal)" />
                 <p-button icon="pi pi-eye" class="mr-1" [rounded]="true" [outlined]="true"
@@ -75,7 +76,7 @@
         </ng-template>
       </p-table>
 
-      <p-dialog [(visible)]="appealDialog" [style]="{ width: '1200px' }" header="Edit Appeal" [modal]="true"
+      <!-- <p-dialog [(visible)]="appealDialog" [style]="{ width: '1200px' }" header="Edit Appeal" [modal]="true"
         styleClass="p-fluid">
         <ng-template pTemplate="content">
           <div class="grid">
@@ -157,10 +158,13 @@
                         </div>
                         <div class="col-12 md:col-6 lg:col-12">
                           <p-calendar id="requirementDate" formControlName="requirementDate" [showIcon]="true"
-                            [ngClass]="{'ng-invalid ng-dirty' : appealsForm.controls['requirementDate'].touched && appealsForm.controls['requirementDate'].errors?.['required']}"></p-calendar>
+                            [minDate]="minDate"
+                            [ngClass]="{'ng-invalid ng-dirty' : appealsForm.controls['requirementDate'].touched && appealsForm.controls['requirementDate'].errors?.['required']}">
+                          </p-calendar>
                           <small class="ng-dirty ng-invalid" style="color: red;"
                             *ngIf="appealsForm.controls['requirementDate'].touched && appealsForm.controls['requirementDate'].errors?.['required']">
-                            Select Requirement date.</small>
+                            Select Requirement date.
+                          </small>
                         </div>
 
                         <div class="col-12 md:col-6 lg:col-12">
@@ -176,13 +180,13 @@
                         <div class="col-12 md:col-6 lg:col-12"></div>
                         <div class="col-12 md:col-6 lg:col-12"></div>
                         <div class="col-12 md:col-6 lg:col-12"></div>
-                        <!-- <div class="flex flex-column sm:flex-row justify-content-between align-items-center gap-3 py-2">
+                        <div class="flex flex-column sm:flex-row justify-content-between align-items-center gap-3 py-2">
                           <button pButton pRipple label="Discard" icon="pi pi-fw pi-trash"
                             class="p-button-danger p-button-outlined flex-1" (click)="hideDialog()"></button>
 
                           <button pButton pRipple label="Save" icon="pi pi-fw pi-check" class="p-button-primary flex-1"
                             (click)="saveAppeal()"></button>
-                        </div> -->
+                        </div>
                         <div class="flex flex-column sm:flex-row justify-content-between align-items-center gap-3 py-2">
                           <button pButton pRipple type="button" label="Discard" [disabled]="!appealsForm.dirty"
                             icon="pi pi-fw pi-trash" class="p-button-danger p-button-outlined flex-1"
@@ -200,7 +204,7 @@
             </div>
           </div>
         </ng-template>
-      </p-dialog>
+      </p-dialog> -->
 
       <p-dialog [(visible)]="viewDialog" [style]="{ width: '1200px' }" header="Appeals Details" [modal]="true"
         styleClass="p-fluid">
